packages/flutter_wasmit/ios/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_ArcStdSyncMutexModule {
  const void *ptr;
} wire_ArcStdSyncMutexModule;
typedef struct wire_CompiledModule {
  struct wire_ArcStdSyncMutexModule field0;
} wire_CompiledModule;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_StringList {
  struct wire_uint_8_list **ptr;
  int32_t len;
} wire_StringList;
typedef struct wire_EnvVariable {
  struct wire_uint_8_list *name;
  struct wire_uint_8_list *value;
} wire_EnvVariable;
typedef struct wire_list_env_variable {
  struct wire_EnvVariable *ptr;
  int32_t len;
} wire_list_env_variable;
typedef struct wire_ExternalValue_Func {
  struct wire_WFunc field0;
} wire_ExternalValue_Func;
typedef struct wire_ExternalValue_Global {
  struct wire_Global field0;
} wire_ExternalValue_Global;
typedef struct wire_ExternalValue_Table {
  struct wire_Table field0;
} wire_ExternalValue_Table;
typedef struct wire_ExternalValue_Memory {
  struct wire_Memory field0;
} wire_ExternalValue_Memory;
typedef struct wire_ExternalValue_SharedMemory {
  struct wire_WasmitSharedMemory *field0;
} wire_ExternalValue_SharedMemory;
typedef union ExternalValueKind {
  struct wire_ExternalValue_Func *Func;
  struct wire_ExternalValue_Global *Global;
  struct wire_ExternalValue_Table *Table;
  struct wire_ExternalValue_Memory *Memory;
  struct wire_ExternalValue_SharedMemory *SharedMemory;
} ExternalValueKind;
typedef struct wire_WasmVal_i32 {
  int32_t field0;
} wire_WasmVal_i32;
typedef struct wire_WasmVal_i64 {
  int64_t field0;
} wire_WasmVal_i64;
typedef struct wire_WasmVal_f32 {
  float field0;
} wire_WasmVal_f32;
typedef struct wire_WasmVal_f64 {
  double field0;
} wire_WasmVal_f64;
typedef struct wire_WasmVal_v128 {
  struct wire_uint_8_list *field0;
} wire_WasmVal_v128;
typedef struct wire_WasmVal_funcRef {
  struct wire_WFunc *field0;
} wire_WasmVal_funcRef;
typedef struct wire_WasmVal_externRef {
  uint32_t *field0;
} wire_WasmVal_externRef;
typedef union WasmValKind {
  struct wire_WasmVal_i32 *i32;
  struct wire_WasmVal_i64 *i64;
  struct wire_WasmVal_f32 *f32;
  struct wire_WasmVal_f64 *f64;
  struct wire_WasmVal_v128 *v128;
  struct wire_WasmVal_funcRef *funcRef;
  struct wire_WasmVal_externRef *externRef;
} WasmValKind;
typedef struct wire_WasmVal {
  int32_t tag;
  union WasmValKind *kind;
} wire_WasmVal;
typedef struct wire_list_wasm_val {
  struct wire_WasmVal *ptr;
  int32_t len;
} wire_list_wasm_val;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
struct wire_list_value_ty *new_list_value_ty_0(int32_t len);
struct wire_list_wasm_val *new_list_wasm_val_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);
void drop_opaque_ArcStdSyncMutexModule(const void *ptr);
const void *share_opaque_ArcStdSyncMutexModule(const void *ptr);
void drop_opaque_Global(const void *ptr);
const void *share_opaque_Global(const void *ptr);
void drop_opaque_Memory(const void *ptr);
const void *share_opaque_Memory(const void *ptr);
void drop_opaque_RwLockSharedMemory(const void *ptr);
const void *share_opaque_RwLockSharedMemory(const void *ptr);
void drop_opaque_Table(const void *ptr);
const void *share_opaque_Table(const void *ptr);
void drop_opaque_WFunc(const void *ptr);
const void *share_opaque_WFunc(const void *ptr);
union ExternalValueKind *inflate_ExternalValue_Func(void);
union ExternalValueKind *inflate_ExternalValue_Global(void);
union ExternalValueKind *inflate_ExternalValue_Table(void);
union ExternalValueKind *inflate_ExternalValue_Memory(void);
union WasmValKind *inflate_WasmVal_i32(void);
union WasmValKind *inflate_WasmVal_i64(void);
union WasmValKind *inflate_WasmVal_f32(void);
union WasmValKind *inflate_WasmVal_f64(void);
union WasmValKind *inflate_WasmVal_v128(void);
union WasmValKind *inflate_WasmVal_funcRef(void);
union WasmValKind *inflate_WasmVal_externRef(void);
void free_WireSyncReturn(WireSyncReturn ptr);