packages/wasmit/lib/src/bridge_generated.io.dart


  late final _new_list_value_ty_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_value_ty> Function(
              ffi.Int32)>>('new_list_value_ty_0');
  late final _new_list_value_ty_0 = _new_list_value_ty_0Ptr
      .asFunction<ffi.Pointer<wire_list_value_ty> Function(int)>();

  ffi.Pointer<wire_list_wasm_val> new_list_wasm_val_0(
    int len,
  ) {
    return _new_list_wasm_val_0(
      len,
    );
  }

  late final _new_list_wasm_val_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_wasm_val> Function(
              ffi.Int32)>>('new_list_wasm_val_0');
  late final _new_list_wasm_val_0 = _new_list_wasm_val_0Ptr
      .asFunction<ffi.Pointer<wire_list_wasm_val> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void drop_opaque_ArcStdSyncMutexModule(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_ArcStdSyncMutexModule(
      ptr,
    );
  }

  late final _drop_opaque_ArcStdSyncMutexModulePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_ArcStdSyncMutexModule');
  late final _drop_opaque_ArcStdSyncMutexModule =
      _drop_opaque_ArcStdSyncMutexModulePtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_ArcStdSyncMutexModule(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_ArcStdSyncMutexModule(
      ptr,
    );
  }

  late final _share_opaque_ArcStdSyncMutexModulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_ArcStdSyncMutexModule');
  late final _share_opaque_ArcStdSyncMutexModule =
      _share_opaque_ArcStdSyncMutexModulePtr
          .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_Global(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Global(
      ptr,
    );
  }

  late final _drop_opaque_GlobalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Global');
  late final _drop_opaque_Global =
      _drop_opaque_GlobalPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Global(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Global(
      ptr,
    );
  }

  late final _share_opaque_GlobalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Global');
  late final _share_opaque_Global = _share_opaque_GlobalPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_Memory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Memory(
      ptr,
    );
  }

  late final _drop_opaque_MemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Memory');
  late final _drop_opaque_Memory =
      _drop_opaque_MemoryPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Memory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Memory(
      ptr,
    );
  }

  late final _share_opaque_MemoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Memory');
  late final _share_opaque_Memory = _share_opaque_MemoryPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_RwLockSharedMemory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_RwLockSharedMemory(
      ptr,
    );
  }

  late final _drop_opaque_RwLockSharedMemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_RwLockSharedMemory');
  late final _drop_opaque_RwLockSharedMemory =
      _drop_opaque_RwLockSharedMemoryPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_RwLockSharedMemory(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_RwLockSharedMemory(
      ptr,
    );
  }

  late final _share_opaque_RwLockSharedMemoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_RwLockSharedMemory');
  late final _share_opaque_RwLockSharedMemory =
      _share_opaque_RwLockSharedMemoryPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_Table(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_Table(
      ptr,
    );
  }

  late final _drop_opaque_TablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_Table');
  late final _drop_opaque_Table =
      _drop_opaque_TablePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_Table(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_Table(
      ptr,
    );
  }

  late final _share_opaque_TablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_Table');
  late final _share_opaque_Table = _share_opaque_TablePtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void drop_opaque_WFunc(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _drop_opaque_WFunc(
      ptr,
    );
  }

  late final _drop_opaque_WFuncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'drop_opaque_WFunc');
  late final _drop_opaque_WFunc =
      _drop_opaque_WFuncPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> share_opaque_WFunc(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _share_opaque_WFunc(
      ptr,
    );
  }

  late final _share_opaque_WFuncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('share_opaque_WFunc');
  late final _share_opaque_WFunc = _share_opaque_WFuncPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Func() {
    return _inflate_ExternalValue_Func();
  }

  late final _inflate_ExternalValue_FuncPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Func');
  late final _inflate_ExternalValue_Func = _inflate_ExternalValue_FuncPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Global() {
    return _inflate_ExternalValue_Global();
  }

  late final _inflate_ExternalValue_GlobalPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Global');
  late final _inflate_ExternalValue_Global = _inflate_ExternalValue_GlobalPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Table() {
    return _inflate_ExternalValue_Table();
  }

  late final _inflate_ExternalValue_TablePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Table');
  late final _inflate_ExternalValue_Table = _inflate_ExternalValue_TablePtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<ExternalValueKind> inflate_ExternalValue_Memory() {
    return _inflate_ExternalValue_Memory();
  }

  late final _inflate_ExternalValue_MemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ExternalValueKind> Function()>>(
          'inflate_ExternalValue_Memory');
  late final _inflate_ExternalValue_Memory = _inflate_ExternalValue_MemoryPtr
      .asFunction<ffi.Pointer<ExternalValueKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_i32() {
    return _inflate_WasmVal_i32();
  }

  late final _inflate_WasmVal_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_i32');
  late final _inflate_WasmVal_i32 =
      _inflate_WasmVal_i32Ptr.asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_i64() {
    return _inflate_WasmVal_i64();
  }

  late final _inflate_WasmVal_i64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_i64');
  late final _inflate_WasmVal_i64 =
      _inflate_WasmVal_i64Ptr.asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_f32() {
    return _inflate_WasmVal_f32();
  }

  late final _inflate_WasmVal_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_f32');
  late final _inflate_WasmVal_f32 =
      _inflate_WasmVal_f32Ptr.asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_f64() {
    return _inflate_WasmVal_f64();
  }

  late final _inflate_WasmVal_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_f64');
  late final _inflate_WasmVal_f64 =
      _inflate_WasmVal_f64Ptr.asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_v128() {
    return _inflate_WasmVal_v128();
  }

  late final _inflate_WasmVal_v128Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_v128');
  late final _inflate_WasmVal_v128 = _inflate_WasmVal_v128Ptr
      .asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_funcRef() {
    return _inflate_WasmVal_funcRef();
  }

  late final _inflate_WasmVal_funcRefPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_funcRef');
  late final _inflate_WasmVal_funcRef = _inflate_WasmVal_funcRefPtr
      .asFunction<ffi.Pointer<WasmValKind> Function()>();

  ffi.Pointer<WasmValKind> inflate_WasmVal_externRef() {
    return _inflate_WasmVal_externRef();
  }

  late final _inflate_WasmVal_externRefPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WasmValKind> Function()>>(
          'inflate_WasmVal_externRef');
  late final _inflate_WasmVal_externRef = _inflate_WasmVal_externRefPtr
      .asFunction<ffi.Pointer<WasmValKind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_ArcStdSyncMutexModule extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_CompiledModule extends ffi.Struct {
  external wire_ArcStdSyncMutexModule field0;
}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_StringList extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_uint_8_list>> ptr;

  @ffi.Int32()
  external int len;
}

class wire_EnvVariable extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;

  external ffi.Pointer<wire_uint_8_list> value;
}

class wire_list_env_variable extends ffi.Struct {
  external ffi.Pointer<wire_EnvVariable> ptr;

  @ffi.Int32()
  external int len;
}
